--- a/CoinTeller/View/Base.lproj/Main.storyboard
+++ b/CoinTeller/View/Base.lproj/Main.storyboard
@@ -17,42 +17,63 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="CoinTeller" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aNq-HB-eTr">
-                                <rect key="frame" x="115" y="92" width="219" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="45"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uYg-ou-DTt">
-                                <rect key="frame" x="20" y="286" width="388" height="158"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZDm-qT-ggv">
+                                <rect key="frame" x="129" y="176.66666666666663" width="170" height="255.33333333333337"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="250" id="Hmv-dg-A7i"/>
+                                </constraints>
+                                <imageReference key="image" image="bitcoinsign.circle.fill" catalog="system" symbolScale="large"/>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                            </imageView>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AaM-zn-Jd4">
+                                <rect key="frame" x="65" y="553.66666666666663" width="320" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="nLR-fm-Dfm"/>
+                                </constraints>
+                            </pickerView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="iT5-CI-7eP">
+                                <rect key="frame" x="110" y="495.33333333333331" width="263" height="38.333333333333314"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZDm-qT-ggv">
-                                        <rect key="frame" x="47" y="36.666666666666629" width="133" height="86"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <imageReference key="image" image="bitcoinsign.circle.fill" catalog="system" symbolScale="large"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$45000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tux-jI-UvA">
-                                        <rect key="frame" x="222" y="58" width="129" height="42"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="2039083.39" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tux-jI-UvA">
+                                        <rect key="frame" x="0.0" y="0.0" width="183" height="38.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="USD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xBy-ew-NGf">
+                                        <rect key="frame" x="198" y="0.0" width="65" height="38.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.9442386506423186" green="0.94620104028721053" blue="0.9265244879357214" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                            </view>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AaM-zn-Jd4">
-                                <rect key="frame" x="10" y="548" width="428" height="278"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </pickerView>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CoinTeller" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aNq-HB-eTr">
+                                <rect key="frame" x="104.66666666666669" y="54" width="219" height="45"/>
+                                <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="45"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ZDm-qT-ggv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1RA-CG-LCM"/>
+                            <constraint firstItem="iT5-CI-7eP" firstAttribute="top" secondItem="ZDm-qT-ggv" secondAttribute="bottom" constant="66.329999999999998" id="98t-vc-0hi"/>
+                            <constraint firstItem="AaM-zn-Jd4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="65" id="HD6-M6-FKk"/>
+                            <constraint firstItem="iT5-CI-7eP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="110" id="VuV-MF-d4s"/>
+                            <constraint firstItem="AaM-zn-Jd4" firstAttribute="top" secondItem="iT5-CI-7eP" secondAttribute="bottom" constant="20" id="az4-o0-mjC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iT5-CI-7eP" secondAttribute="trailing" constant="55" id="daM-qM-EvE"/>
+                            <constraint firstItem="aNq-HB-eTr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="ezj-9g-bhm"/>
+                            <constraint firstItem="ZDm-qT-ggv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="129" id="hLr-me-vcU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="AaM-zn-Jd4" secondAttribute="trailing" constant="43" id="lRX-nx-1KU"/>
+                            <constraint firstItem="ZDm-qT-ggv" firstAttribute="top" secondItem="aNq-HB-eTr" secondAttribute="bottom" constant="79.999999999999972" id="lsM-yo-eZs"/>
+                            <constraint firstItem="aNq-HB-eTr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="q5Y-yH-SEO"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="bitcoinLabel" destination="aNq-HB-eTr" id="2aU-sA-O5L"/>
+                        <outlet property="currencyLabel" destination="xBy-ew-NGf" id="bRC-jI-TRM"/>
                         <outlet property="currencyPicker" destination="AaM-zn-Jd4" id="iso-fE-0e0"/>
                         <outlet property="priceLabel" destination="Tux-jI-UvA" id="Kwa-9c-Tk2"/>
                     </connections>
